--- a/index.html
+++ b/index.html
@@ -653,10 +653,10 @@
     <div class="container">
       <div class="nav-brand">EMNLP 2025 Tutorial</div>
       <ul class="nav-links">
-        <li><a href="#video">Video</a></li>
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#materials">Materials</a></li>
         <li><a href="#citation">Citation</a></li>
+        <li><a href="#video">Video</a></li>
       </ul>
     </div>
   </nav>
@@ -687,38 +687,15 @@
           A half-day tutorial exploring the convergence of spoken conversational agents toward voice-native LLMs — from cascaded ASR/NLU to end-to-end, retrieval and vision-grounded systems, covering cross-modal alignment, joint speech–text training, and practical recipes for building robust conversational AI.
         </p>
         <div class="hero-cta">
-          <a href="https://www.youtube.com/watch?v=Qvb0Ov0Aa_Q" target="_blank" class="btn btn-primary">
-            <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-            Watch Tutorial Video
-          </a>
-          <a href="https://drive.google.com/drive/folders/1j09InRj5gK5RfhDsMS8YiU03D_t8c5l6?usp=drive_link" target="_blank" class="btn btn-secondary">
+          <a href="https://drive.google.com/drive/folders/1j09InRj5gK5RfhDsMS8YiU03D_t8c5l6?usp=drive_link" target="_blank" class="btn btn-primary">
             <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/></svg>
             Download Materials
           </a>
+          <a href="#schedule" class="btn btn-secondary">View Schedule</a>
         </div>
         <div class="hero-image">
           <img src="https://github.com/huckiyang/emnlp-25-spoken-agents-llm/blob/main/spok-llm-main.PNG?raw=true" alt="Spoken LLM Tutorial Overview">
         </div>
-      </div>
-    </section>
-
-    <section id="video">
-      <div class="container">
-        <div class="section-header">
-          <h2>Tutorial Recording</h2>
-          <p>Watch the full tutorial presentation from EMNLP 2025</p>
-        </div>
-
-        <a href="https://www.youtube.com/watch?v=Qvb0Ov0Aa_Q" target="_blank" class="video-link-card">
-          <div class="video-icon">
-            <svg width="48" height="48" fill="currentColor" viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-          </div>
-          <div class="video-link-info">
-            <h3>Watch Tutorial on YouTube</h3>
-            <p>Spoken Conversational Agents with Large Language Models — Full Recording</p>
-          </div>
-          <svg class="arrow-icon" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
-        </a>
       </div>
     </section>
 
@@ -1010,6 +987,26 @@
             Copy to Clipboard
           </button>
         </div>
+      </div>
+    </section>
+
+    <section id="video">
+      <div class="container">
+        <div class="section-header">
+          <h2>Tutorial Recording</h2>
+          <p>Watch the full tutorial presentation from EMNLP 2025</p>
+        </div>
+
+        <a href="https://www.youtube.com/watch?v=Qvb0Ov0Aa_Q" target="_blank" class="video-link-card">
+          <div class="video-icon">
+            <svg width="48" height="48" fill="currentColor" viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+          </div>
+          <div class="video-link-info">
+            <h3>Watch Tutorial on YouTube</h3>
+            <p>Spoken Conversational Agents with Large Language Models — Full Recording</p>
+          </div>
+          <svg class="arrow-icon" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+        </a>
       </div>
     </section>
   </main>
